Fix issue with task alignment so objects center without additional properties needed
.task had align-content center applied, this needed to be changed to align-items center

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ li>img {
 
 .task {
     display: flex;
-    align-content: center;
+    align-items: center;
     padding: .25rem .5rem;
     gap: 1.5rem;
     background-color: var(--bg-color5);
@@ -105,7 +105,6 @@ li>img {
     position: relative;
     width: 1rem;
     height: 1rem;
-    top: .4rem;
     border: solid 1px var(--bg-color1);
     background-color: var(--bg-color3);
     border-radius: 5px;
@@ -131,6 +130,13 @@ li>img {
     background-color: var(--bg-color2);
     border: solid .1rem var(--bg-color6);
     border-radius: 5px;
+}
+
+.task>button {
+    font-weight: bold;
+    width: 1rem;
+    height: 1rem;
+    vertical-align: middle;
 }
 
 .add-task-btn {
